--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "26ec792d-757e-4653-b04b-cff55c8053d1",
    "metadata": {
     "id": "26ec792d-757e-4653-b04b-cff55c8053d1"
@@ -485,8 +485,8 @@
     "import re\n",
     "\n",
     "input_string = \"My favorite number is 9\" # an example of possible input\n",
-    "hasNumber = bool(re.search(r'\\b[0-9]{1,1}\\b', input_string))\n",
-    "print(hasNumber)"
+    "hasNumber = (re.search(r'\\b[0-9]{1,1}\\b', input_string))\n",
+    "print(bool(hasNumber))"
    ]
   },
   {
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1",
    "metadata": {
     "colab": {
@@ -963,6 +963,8 @@
    ],
    "source": [
     "\n",
+    "#si-date-check\n",
+    "\n",
     "import re\n",
     "\n",
     "\n",
@@ -970,7 +972,7 @@
     "\n",
     "    date_pattern_match = r\"^(0[1-9]|[12]\\d|3[01])(-)(0[1-9]|[12][012])(-)([\\d{4}])*$\"\n",
     "\n",
-    "    if re.match(date_pattern_match, date):\n",
+    "    if re.search(date_pattern_match, date):\n",
     "        return True\n",
     "    return False\n",
     "\n",
