--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -465,28 +465,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "26ec792d-757e-4653-b04b-cff55c8053d1",
    "metadata": {
     "id": "26ec792d-757e-4653-b04b-cff55c8053d1"
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#si-favorite\n",
-    "\n",
     "import re\n",
     "\n",
-    "input_string = \"My favorite number is 9\" # an example of possible input\n",
-    "hasNumber = (re.search(r'\\b[0-9]{1,1}\\b', input_string))\n",
-    "print(bool(hasNumber))"
+    "input_string == \"My favorite number is 12.\" \n",
+    "hasNumber = re.search(r'\\b\\d{1}\\b', input_string)\n",
+    "(bool(hasNumber))"
    ]
   },
   {
